force-app/main/default/objects/baba__c/baba__c.object-meta.xml
<CustomObject>
    <label>baba</label>
    <nameField>
        <label>baba Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>babas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>