force-app/main/default/objects/baba__c/fields/gdzie_jest__c.field-meta.xml
<CustomField>
    <fullName>gdzie_jest__c</fullName>
    <label>gdzie_jest</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>