force-app/main/default/objects/baba__c/fields/ile_bierze__c.field-meta.xml
<CustomField>
    <fullName>ile_bierze__c</fullName>
    <label>ile_bierze</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>