force-app/main/default/objects/baba__c/fields/kolory__c.field-meta.xml
<CustomField>
    <fullName>kolory__c</fullName>
    <label>kolory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blondi</fullName>
            </value>
            <value>
                <fullName>czarna</fullName>
            </value>
            <value>
                <fullName>kudlata</fullName>
            </value>
            <value>
                <fullName>lysa</fullName>
            </value>
            <value>
                <fullName>ruda</fullName>
            </value>
            <value>
                <fullName>szatynka</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>