force-app/main/default/objects/baba__c/fields/numerek__c.field-meta.xml
<CustomField>
    <fullName>numerek__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>numerek</label>
    <type>AutoNumber</type>
</CustomField>